Fixed toast issue not left aligned

--- a/schmodel-registration-frontend/src/app/pages/client-login/client-login.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/client-login/client-login.component.scss
@@ -132,6 +132,7 @@
       display: block;
       width: initial;
       margin: 0 -30px;   
+      text-align: left;
     }
   }
 }
