--- a/schmodel-registration-frontend/src/app/pages/login/login.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/login/login.component.scss
@@ -163,6 +163,7 @@ $topnav-background-color: #222;
       display: block;
       width: initial;
       margin: 0 -30px;
+      text-align: left;
 
     }
   }
